--- a/packages/ui/src/components/landing/layout/sidebar/sidebar.module.scss
+++ b/packages/ui/src/components/landing/layout/sidebar/sidebar.module.scss
@@ -1,20 +1,21 @@
 .drawerContent {
-    overflow: visible !important;
+    overflow: visible;
+
 }
 
 .sidebarCloseBtn {
     position: absolute;
-    background: rgba(0, 0, 0, 0.4) !important;
+    background: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.2) !important;
-    color: white !important;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    color: white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition: all 0.2s ease;
     z-index: 1000;
 
     &:hover {
-        background: rgba(0, 0, 0, 0.6) !important;
+        background: rgba(0, 0, 0, 0.6);
         transform: scale(1.05);
     }
 
@@ -39,10 +40,6 @@
     }
 }
 
-.searchSection {
-    margin-bottom: 0.25rem;
-}
-
 .navLinksContainer {
     display: flex;
     flex-direction: column;
@@ -61,9 +58,9 @@
 .sidebarLink {
     text-decoration: none;
     color: var(--vinaup-black);
-    font-size: 1.125rem;
-    font-weight: 500;
-    padding: 0.5rem 0.75rem;
+    font-size: 1.25rem;
+    font-weight: 400;
+    padding: 0.75rem;
     padding-left: 12px;
     border-radius: 4px;
     display: block;
@@ -71,7 +68,6 @@
     transition: background-color 0.2s, transform 0.2s;
 
     &:hover {
-        background-color: rgba(211, 211, 211, 0.3);
         transform: translateX(5px);
     }
 }
@@ -84,7 +80,7 @@
 
 .brandTitle {
     color: var(--vinaup-black);
-    font-size: 1.5rem;
-    font-weight: 400;
+    font-size: 1.625rem;
+    font-weight: 500;
     letter-spacing: 0.5px;
 }
